footer overlap fix

--- a/TheLineUp/public/css/scss/_global.scss
+++ b/TheLineUp/public/css/scss/_global.scss
@@ -20,7 +20,7 @@ body {
   background-color: $secondry-color;
   padding-top:78px;
   position:relative;
-  padding-bottom:315px;
+  padding-bottom:356px;
   min-height:100vh;
   
 }
