--- a/TheLineUp/public/css/styles.css
+++ b/TheLineUp/public/css/styles.css
@@ -14,7 +14,7 @@ body {
   background-color: #f9fbfc;
   padding-top: 78px;
   position: relative;
-  padding-bottom: 315px;
+  padding-bottom: 356px;
   min-height: 100vh;
 }
 
